--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Forms\EmployeeForm.Designer.cs">
       <DependentUpon>EmployeeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmJobsNew.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmJobsNew.Designer.cs">
+      <DependentUpon>FrmJobsNew.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\NotificationFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EmployeeForm.resx">
       <DependentUpon>EmployeeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmJobsNew.resx">
+      <DependentUpon>FrmJobsNew.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NotificationFrm.resx">
       <DependentUpon>NotificationFrm.cs</DependentUpon>
