--- a/Delmon Managment System/App.config
+++ b/Delmon Managment System/App.config
@@ -5,6 +5,11 @@
             <section name="Delmon_Managment_System.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings>
+        <add name="Delmon_Managment_System.Properties.Settings.DelmonGroupDBConnectionString"
+            connectionString="Data Source=DELSQLSRVR;Initial Catalog=DelmonGroupDB;Persist Security Info=True;User ID=sa;Password=Ram72763@"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
