--- a/Delmon Managment System/Properties/Settings.settings
+++ b/Delmon Managment System/Properties/Settings.settings
@@ -8,5 +8,13 @@
     <Setting Name="Password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DelmonGroupDBConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=DELSQLSRVR;Initial Catalog=DelmonGroupDB;Persist Security Info=True;User ID=sa;Password=Ram72763@&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=DELSQLSRVR;Initial Catalog=DelmonGroupDB;Persist Security Info=True;User ID=sa;Password=Ram72763@</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
