last Version With out Report

--- a/Delmon Managment System/App.config
+++ b/Delmon Managment System/App.config
@@ -1,26 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Delmon_Managment_System.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <connectionStrings>
-        <add name="Delmon_Managment_System.Properties.Settings.DelmonGroupDBConnectionString"
-            connectionString="Data Source=DELSQLSRVR;Initial Catalog=DelmonGroupDB;Persist Security Info=True;User ID=sa;Password=Ram72763@"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
-    <userSettings>
-        <Delmon_Managment_System.Properties.Settings>
-            <setting name="UserName" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Password" serializeAs="String">
-                <value />
-            </setting>
-        </Delmon_Managment_System.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="Delmon_Managment_System.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <connectionStrings>
+    <add name="Delmon_Managment_System.Properties.Settings.DelmonGroupDBConnectionString" connectionString="Data Source=DELSQLSRVR;Initial Catalog=DelmonGroupDB;Persist Security Info=True;User ID=sa;Password=Ram72763@" providerName="System.Data.SqlClient" />
+    <add name="DelmonGroupDBEntities" connectionString="metadata=res://*/DelmonGroup.csdl|res://*/DelmonGroup.ssdl|res://*/DelmonGroup.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DELSQLSRVR;initial catalog=DelmonGroupDB;persist security info=True;user id=sa;password=Ram72763@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <userSettings>
+    <Delmon_Managment_System.Properties.Settings>
+      <setting name="UserName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value />
+      </setting>
+    </Delmon_Managment_System.Properties.Settings>
+  </userSettings>
 </configuration>
