--- a/Delmon Managment System/App.config
+++ b/Delmon Managment System/App.config
@@ -8,6 +8,7 @@
   <connectionStrings>
     <add name="Delmon_Managment_System.Properties.Settings.DelmonGroupDBConnectionString" connectionString="Data Source=DELSQLSRVR;Initial Catalog=DelmonGroupDB;Persist Security Info=True;User ID=sa;Password=Ram72763@" providerName="System.Data.SqlClient" />
     <add name="DelmonGroupDBEntities" connectionString="metadata=res://*/DelmonGroup.csdl|res://*/DelmonGroup.ssdl|res://*/DelmonGroup.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DELSQLSRVR;initial catalog=DelmonGroupDB;persist security info=True;user id=sa;password=Ram72763@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DelmonGroupDBEntities1" connectionString="metadata=res://*/Delmon.csdl|res://*/Delmon.ssdl|res://*/Delmon.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DELSQLSRVR;initial catalog=DelmonGroupDB;persist security info=True;user id=sa;password=Ram72763@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
