--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -131,6 +131,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLCONNECTION.cs" />
     <Compile Include="ThemeColor.cs" />
+    <Compile Include="VisaOfferLTR.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VisaOfferLTR.Designer.cs">
+      <DependentUpon>VisaOfferLTR.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,6 +177,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VisaOfferLTR.resx">
+      <DependentUpon>VisaOfferLTR.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VisaRequest.rdlc" />
     <None Include="Delmon.xsc">
       <DependentUpon>Delmon.xsd</DependentUpon>
