--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -131,6 +131,12 @@
     <Compile Include="Forms\FrmJobsNew.Designer.cs">
       <DependentUpon>FrmJobsNew.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmShowDoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmShowDoc.Designer.cs">
+      <DependentUpon>FrmShowDoc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\NotificationFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -192,6 +198,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmJobsNew.resx">
       <DependentUpon>FrmJobsNew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmShowDoc.resx">
+      <DependentUpon>FrmShowDoc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NotificationFrm.resx">
       <DependentUpon>NotificationFrm.cs</DependentUpon>
