--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>44</ApplicationRevision>
+    <ApplicationRevision>46</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -126,11 +126,23 @@
     <Compile Include="Forms\FrmAgencyNew.Designer.cs">
       <DependentUpon>FrmAgencyNew.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmDeptNew.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmDeptNew.Designer.cs">
+      <DependentUpon>FrmDeptNew.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmJobsNew.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\FrmJobsNew.Designer.cs">
       <DependentUpon>FrmJobsNew.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FrmNewWorkLoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmNewWorkLoc.Designer.cs">
+      <DependentUpon>FrmNewWorkLoc.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FrmShowDoc.cs">
       <SubType>Form</SubType>
@@ -198,8 +210,14 @@
     <EmbeddedResource Include="Forms\FrmAgencyNew.resx">
       <DependentUpon>FrmAgencyNew.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmDeptNew.resx">
+      <DependentUpon>FrmDeptNew.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmJobsNew.resx">
       <DependentUpon>FrmJobsNew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmNewWorkLoc.resx">
+      <DependentUpon>FrmNewWorkLoc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmShowDoc.resx">
       <DependentUpon>FrmShowDoc.cs</DependentUpon>
