--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -132,6 +132,12 @@
     <Compile Include="Forms\FrmDeptNew.Designer.cs">
       <DependentUpon>FrmDeptNew.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmDocShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmDocShow.Designer.cs">
+      <DependentUpon>FrmDocShow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmJobsNew.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -212,6 +218,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmDeptNew.resx">
       <DependentUpon>FrmDeptNew.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmDocShow.resx">
+      <DependentUpon>FrmDocShow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmJobsNew.resx">
       <DependentUpon>FrmJobsNew.cs</DependentUpon>
