--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -150,11 +150,17 @@
     <Compile Include="Forms\FrmJobsNew.Designer.cs">
       <DependentUpon>FrmJobsNew.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmNewModel.cs">
+    <Compile Include="Forms\FrmMoreinfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmNewModel.Designer.cs">
-      <DependentUpon>frmNewModel.cs</DependentUpon>
+    <Compile Include="Forms\FrmMoreinfo.Designer.cs">
+      <DependentUpon>FrmMoreinfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FrmNewModel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmNewModel.Designer.cs">
+      <DependentUpon>FrmNewModel.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FrmNewWorkLoc.cs">
       <SubType>Form</SubType>
@@ -228,8 +234,11 @@
     <EmbeddedResource Include="Forms\FrmJobsNew.resx">
       <DependentUpon>FrmJobsNew.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmNewModel.resx">
-      <DependentUpon>frmNewModel.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FrmMoreinfo.resx">
+      <DependentUpon>FrmMoreinfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmNewModel.resx">
+      <DependentUpon>FrmNewModel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmNewWorkLoc.resx">
       <DependentUpon>FrmNewWorkLoc.cs</DependentUpon>
