--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -25,7 +25,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>111</ApplicationRevision>
+    <ApplicationRevision>114</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -168,6 +168,12 @@
     <Compile Include="Forms\FrmNewWorkLoc.Designer.cs">
       <DependentUpon>FrmNewWorkLoc.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmUserPermissions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmUserPermissions.Designer.cs">
+      <DependentUpon>FrmUserPermissions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\PrintingFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -242,6 +248,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmNewWorkLoc.resx">
       <DependentUpon>FrmNewWorkLoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmUserPermissions.resx">
+      <DependentUpon>FrmUserPermissions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PrintingFrm.resx">
       <DependentUpon>PrintingFrm.cs</DependentUpon>
