--- a/Delmon Managment System/Delmon Managment System.csproj
+++ b/Delmon Managment System/Delmon Managment System.csproj
@@ -15,19 +15,24 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>D:\Delmon Co Ltd\IT Team - Documents\HR Software\Delmon HR\</PublishUrl>
+    <PublishUrl>\\192.168.1.15\Software\Delmon HR\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
+    <InstallFrom>Unc</InstallFrom>
+    <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>119</ApplicationRevision>
+    <InstallUrl>\\192.168.1.15\Software\Delmon HR\</InstallUrl>
+    <ProductName>Delmon Managment System</ProductName>
+    <PublisherName>Delmon Group Of Companies - IT</PublisherName>
+    <MinimumRequiredVersion>1.0.0.9</MinimumRequiredVersion>
+    <ApplicationRevision>21</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -68,6 +73,8 @@
   <PropertyGroup>
     <ApplicationIcon>logo.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
@@ -78,6 +85,8 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web" />
@@ -203,6 +212,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLCONNECTION.cs" />
     <Compile Include="ThemeColor.cs" />
+    <Compile Include="VersionFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VersionFrm.Designer.cs">
+      <DependentUpon>VersionFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="VisaOfferLTR.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -269,6 +284,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VersionFrm.resx">
+      <DependentUpon>VersionFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VisaOfferLTR.resx">
       <DependentUpon>VisaOfferLTR.cs</DependentUpon>
     </EmbeddedResource>
@@ -304,34 +322,31 @@
       <Version>32.0.3</Version>
     </PackageReference>
     <PackageReference Include="EntityFramework">
-      <Version>6.2.0</Version>
+      <Version>6.5.0-preview2-24180-01</Version>
     </PackageReference>
     <PackageReference Include="EPPlus">
-      <Version>7.0.0-rc1</Version>
+      <Version>7.1.3</Version>
     </PackageReference>
     <PackageReference Include="ExcelDataReader">
-      <Version>3.7.0-develop00385</Version>
+      <Version>3.7.0-develop00411</Version>
     </PackageReference>
     <PackageReference Include="ExcelDataReader.DataSet">
-      <Version>3.7.0-develop00385</Version>
+      <Version>3.7.0-develop00411</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Office.Interop.Outlook">
       <Version>15.0.4797.1004</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.ReportingServices.ReportViewerControl.Winforms">
-      <Version>150.1537.0</Version>
+      <Version>150.1652.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Windows.SDK.Contracts">
-      <Version>10.0.19041.1</Version>
+      <Version>10.0.26100.1</Version>
     </PackageReference>
     <PackageReference Include="Ninject">
-      <Version>3.3.6</Version>
-    </PackageReference>
-    <PackageReference Include="Syncfusion.SfInput.WinForms">
-      <Version>20.3.0.48</Version>
+      <Version>4.0.0-beta.1</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SqlClient">
-      <Version>4.8.3</Version>
+      <Version>4.8.6</Version>
     </PackageReference>
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
